<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="10dp"
        app:strokeColor="@color/backgroundCardView"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/country_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:textAlignment="center"
                style="@style/TextAppearance.DisplayName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/country" />

            <TextView
                android:id="@+id/case_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/cases_title"
                android:textAlignment="center"
                style="@style/TextAppearance.TitleCase"
                app:layout_constraintEnd_toStartOf="@id/death_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/country_text" />

            <TextView
                android:id="@+id/death_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/death_title"
                android:textAlignment="center"
                style="@style/TextAppearance.TitleCase"
                app:layout_constraintEnd_toStartOf="@id/recover_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/case_title"
                app:layout_constraintTop_toBottomOf="@id/country_text" />

            <TextView
                android:id="@+id/recover_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/recover_title"
                android:textAlignment="center"
                style="@style/TextAppearance.TitleCase"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/death_title"
                app:layout_constraintTop_toBottomOf="@id/country_text" />

            <TextView
                android:id="@+id/confirm_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:textAlignment="center"
                style="@style/TextAppearance.Confirmed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/death_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/case_title"
                tools:text="Confirmed" />

            <TextView
                android:id="@+id/death_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:textAlignment="center"
                style="@style/TextAppearance.Death"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/recover_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/confirm_text"
                app:layout_constraintTop_toBottomOf="@id/death_title"
                tools:text="Deaths" />

            <TextView
                android:id="@+id/recover_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_margin"
                android:textAlignment="center"
                style="@style/TextAppearance.Recovered"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/death_text"
                app:layout_constraintTop_toBottomOf="@id/recover_title"
                tools:text="Recovered" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>