<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/search_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/normal_margin"
                    android:background="@android:color/white"
                    app:queryHint="@string/enter_country" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            tools:context=".view.search.SearchFragment">

            <ProgressBar
                android:id="@+id/progress_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/error_search"
                style="@style/TextAppearance.DisplayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/the_country_can_not_be_found"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="10dp"
                app:strokeColor="@color/backgroundCardView"
                android:transitionName="search_container"
                app:strokeWidth="2dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/country_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/normal_margin"
                        android:textAlignment="center"
                        style="@style/TextAppearance.DisplayName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/country" />

                    <TextView
                        android:id="@+id/case_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:text="@string/cases_title"
                        android:textAlignment="center"
                        style="@style/TextAppearance.TitleCase"
                        app:layout_constraintEnd_toStartOf="@id/death_title"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="spread"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/country_text" />

                    <TextView
                        android:id="@+id/death_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:text="@string/death_title"
                        android:textAlignment="center"
                        style="@style/TextAppearance.TitleCase"
                        app:layout_constraintEnd_toStartOf="@id/recover_title"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@id/case_title"
                        app:layout_constraintTop_toBottomOf="@id/country_text" />

                    <TextView
                        android:id="@+id/recover_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/normal_margin"
                        android:text="@string/recover_title"
                        android:textAlignment="center"
                        style="@style/TextAppearance.TitleCase"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@id/death_title"
                        app:layout_constraintTop_toBottomOf="@id/country_text" />

                    <TextView
                        android:id="@+id/confirm_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:textAlignment="center"
                        style="@style/TextAppearance.Confirmed"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/death_text"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/case_title"
                        tools:text="Confirmed" />

                    <TextView
                        android:id="@+id/death_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:textAlignment="center"
                        style="@style/TextAppearance.Death"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/recover_text"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@id/confirm_text"
                        app:layout_constraintTop_toBottomOf="@id/death_title"
                        tools:text="Deaths" />

                    <TextView
                        android:id="@+id/recover_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:textAlignment="center"
                        style="@style/TextAppearance.Recovered"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@id/death_text"
                        app:layout_constraintTop_toBottomOf="@id/recover_title"
                        tools:text="Recovered" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>